examples/type_system/failing/136_tuple_projection_precise_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/136_tuple_projection_precise_mismatch.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `value` does not match its type annotation.
//
//   examples/type_system/failing/136_tuple_projection_precise_mismatch.flx:28:22
//    |
// 28 |     let value: Int = (1, "s").1
//    |                      ^^^^^^^^^^
//    |                      ---------- this value has type `String`
//
//    |                --- but `value` was annotated as `Int`
//
// Note:
//   annotated type: Int
//   value type: String
//
// Help:
//   Change `value` to a `Int` value or update the annotation.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn main() -> Unit {
    let value: Int = (1, "s").1
}
